--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="dark">
+  <ion-toolbar>
     <ion-title>
       Übersicht
     </ion-title>
@@ -7,7 +7,7 @@
 </ion-header>
 
 
-<ion-content color="dark" *ngIf="loaded">
+<ion-content *ngIf="loaded">
   <ion-grid>
     <ion-row>
       <ion-col class="ion-text-center" size="3"></ion-col>
