--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,12 +1,12 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="dark">
+  <ion-toolbar>
     <ion-title>
       Diese Woche
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content color="dark" *ngIf="loaded">
+<ion-content *ngIf="loaded">
   <ion-grid>
     <ion-row>
       <ion-col class="ion-text-center" size="3">Tag</ion-col>
