--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom" color="dark">
+  <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="barbell-outline"></ion-icon>
     </ion-tab-button>
