--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,6 +7,7 @@
 </ion-header>
 <ion-content *ngIf="!loaded">
     <ion-label>NOT loaded</ion-label>
+    dfghjk
 </ion-content>
 <ion-content *ngIf="loaded">
     <ion-label>loaded!</ion-label>
