--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,7 +13,7 @@
       <ion-col class="ion-text-center" size="3"></ion-col>
       <ion-col class="ion-text-center" size="3">Gewicht[Kg]</ion-col>
       <ion-col class="ion-text-center" size="3">Fat[%]</ion-col>
-      <ion-col class="ion-text-center" size="3">Muskeln[%]</ion-col>
+      <ion-col class="ion-text-center" size="3">Muskel[%]</ion-col>
     </ion-row>
     <ion-row *ngFor="let week of weeks">
       <ion-col class="ion-text-center" size="3">
