--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,18 +6,17 @@
   </ion-toolbar>
 </ion-header>
 
-
 <ion-content *ngIf="loaded">
   <ion-grid>
     <ion-row>
-      <ion-col class="ion-text-center" size="3"></ion-col>
-      <ion-col class="ion-text-center" size="3">Gewicht[Kg]</ion-col>
-      <ion-col class="ion-text-center" size="3">Fat[%]</ion-col>
-      <ion-col class="ion-text-center" size="3">Muskel[%]</ion-col>
+      <ion-col class="ion-text-center" size="3"><ion-label class="smaller">Woche</ion-label></ion-col>
+      <ion-col class="ion-text-center" size="3"><ion-label class="smaller">Gewicht[Kg]</ion-label></ion-col>
+      <ion-col class="ion-text-center" size="3"><ion-label class="smaller">Fat[%]</ion-label></ion-col>
+      <ion-col class="ion-text-center" size="3"><ion-label class="smaller">Muskel[%]</ion-label></ion-col>
     </ion-row>
     <ion-row *ngFor="let week of weeks">
       <ion-col class="ion-text-center" size="3">
-          <ion-label>Woche {{week.nr}}</ion-label>
+          <ion-label>KW{{week.nr}}</ion-label>
       </ion-col>
       <ion-col class="ion-text-center" size="3">
         <ion-label>{{week.durchschnitt.gewicht}}</ion-label>
@@ -28,6 +27,19 @@
       <ion-col class="ion-text-center" size="3">
         <ion-label>{{week.durchschnitt.muskel}}</ion-label>
       </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
+
+
+<ion-content *ngIf="!loaded">
+  <ion-progress-bar type="indeterminate"></ion-progress-bar>
+  <ion-grid>
+    <ion-row>
+      <ion-col class="ion-text-center" size="3"><ion-label class="smaller">Woche</ion-label></ion-col>
+      <ion-col class="ion-text-center" size="3"><ion-label class="smaller">Gewicht[Kg]</ion-label></ion-col>
+      <ion-col class="ion-text-center" size="3"><ion-label class="smaller">Fat[%]</ion-label></ion-col>
+      <ion-col class="ion-text-center" size="3"><ion-label class="smaller">Muskel[%]</ion-label></ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
